Base pages added

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #303030;
+  color: white;
+}
+
+.info-snackbar div {
+    background-color: #c2185b;
+}
+
+.info-snackbar .mat-mdc-snack-bar-label {
+  color: white!important;
+}
+
+.mat-mdc-snack-bar-container .mdc-snackbar__surface {
+  background-color: #c2185b!important;
+}
+
+.mat-mdc-snack-bar-label .mdc-snackbar__label {
+  text-align: center;
+  font-size: 18px!important;
+}
