--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,14 @@
 .container {
+  display: flex;
+  justify-content: center;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  height: calc(100vh - 65px);
+  height: calc(100vh - 95px);
+  padding-top: 30px;
 }
+
 @media (min-width: 950px) {
   .container {
     width: 900px;
