--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<div class="container" fxLayout="column" fxLayoutGap="30px">
+<div class="container">
   <router-outlet></router-outlet>
 </div>
