--- a/src/pages/info/info.component.css
+++ b/src/pages/info/info.component.css
@@ -4,3 +4,22 @@ h1 {
   line-height: 60px;
 }
 
+@media (max-width: 950px) {
+  h1 {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+@media (max-width: 600px) {
+  h1 {
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+
