--- a/src/pages/projects/projects.component.html
+++ b/src/pages/projects/projects.component.html
@@ -1,3 +1,4 @@
+<app-toolbar></app-toolbar>
 <div class="projects">
   <app-card [title]="project.title" [id]="project.id" *ngFor="let project of this.projects"></app-card>
 </div>
