--- a/src/pages/project/project.component.html
+++ b/src/pages/project/project.component.html
@@ -1,1 +1,10 @@
-<p>project works! {{id}}</p>
+<h1 class="title">{{project.title}}</h1>
+<div class="content">
+  <div class="cards">
+    <app-task></app-task>
+    <app-task></app-task>
+    <app-task></app-task>
+    <app-task></app-task>
+    <app-task></app-task>
+  </div>
+</div>
