--- a/src/pages/projects/projects.component.css
+++ b/src/pages/projects/projects.component.css
@@ -10,6 +10,19 @@
 
 .projects {
   display: flex;
-  flex: 1 1;
   flex-direction: column;
+  flex: 1 1;
+}
+
+mat-paginator {
+  font-size: 20px;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 480px) {
+
+  mat-paginator {
+    font-size: 15px;
+  }
 }
