--- a/src/shared/components/header/header.component.html
+++ b/src/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="main-content-wrapper" (click)="hideBurgerMenu()">
       <a mat-flat-button routerLink="/projects" color="primary">PROJECTS</a>
       <a mat-flat-button routerLink="/login" color="primary">LOGIN</a>
-      <a mat-flat-button routerLink="/" color="primary">REGISTER</a>
+      <a mat-flat-button routerLink="/register" color="primary">REGISTER</a>
     </div>
   </div>
 </div>
@@ -18,7 +18,7 @@
       <a mat-flat-button routerLink="/projects" color="primary">PROJECTS</a>
       <span class="spacer"></span>
       <a mat-flat-button routerLink="/login" color="primary">LOGIN</a>
-      <a mat-flat-button routerLink="/" color="primary">REGISTER</a>
+      <a mat-flat-button routerLink="/register" color="primary">REGISTER</a>
     </div>
   </mat-toolbar>
 </div>
