--- a/src/pages/login/login.component.css
+++ b/src/pages/login/login.component.css
@@ -1,13 +1,17 @@
 :host {
-  overflow-y: hidden;
+  display: flex;
+  flex: 1 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 mat-card {
+  display: flex;
   height: 500px;
   max-width: 700px;
   width: 700px;
   text-align: center;
-  line-height: calc(100vh - 65px);
 }
 
 form {
